--- a/client/main.scss
+++ b/client/main.scss
@@ -448,8 +448,12 @@ Login page
     .dash-borrowed-books div:last-child li{
         display: flex;
         justify-content: space-between;
-        margin: 10px 0;
+        margin: 15px 0;
         word-break: break-all;
+    }
+    .dash-borrowed-books div:last-child li a {
+        padding-right: 20px;
+        max-width: 75%;
     }
     //----- dash collection
     .dash-collection {
@@ -505,7 +509,11 @@ Login page
         border-bottom: 1px solid $greyBorder;
     }
     .dash-collection ul li {
-        margin: 10px 0;
+        margin: 15px 0;
+    }
+    .dash-collection ul li div a{
+        padding-right: 20px;
+        max-width: 75%;
     }
     .dash-collection ul li div:first-child {
         display: flex;
@@ -573,6 +581,12 @@ Login page
     }
     .dash-books-lent ul li {
         margin: 20px 0;
+        word-break: break-all;
+    }
+    .dash-books-lent ul li div h4{
+        padding-right: 20px;
+        max-width: 75%;
+        margin-bottom: 5px;
     }
     .dash-books-lent ul li div{
         display: flex;
@@ -614,8 +628,9 @@ Login page
     .m-group-headers-container div {
         display: flex;
     }
-    .m-group-headers-container div h2{
+    .m-group-headers-container h2{
         margin-bottom: 5px;
+        word-break: break-all;
     }
     .m-group-headers-container div h5{
         margin-right: 10px;
@@ -704,7 +719,8 @@ Login page
     .m-group-item li {
         display: flex;
         justify-content: space-between;
-        margin: 10px 0;
+        margin: 15px 0;
+        word-break: break-all;
     }
     .m-group-item li a {
         margin-right: 5px;
@@ -730,6 +746,10 @@ Login page
         bottom: 20%;
         left: 10%;
         color: white;
+    }
+    .m-book-container p {
+        word-break: break-all;
+        margin-bottom: 20px;
     }
     .m-book-container h3:first-child, {
         align-self: center;
