nav dropdown update

--- a/public/main.css
+++ b/public/main.css
@@ -705,6 +705,25 @@ Login page
   .nav-left {
     display: flex;
     align-items: center; }
+  .dropdown-icon {
+    display: none; }
+  .dropdown-menu {
+    position: relative;
+    top: 0; }
+  .dropdown-menu ul {
+    display: flex; }
+  .dropdown-menu ul li {
+    border: none;
+    margin-right: 20px; }
+  .dropdown-menu ul li button {
+    background-color: #06D4FF;
+    margin-right: 20px;
+    font-size: 14px;
+    padding: 15px 30px; }
+  .dropdown-menu .d-logged-in {
+    display: none; }
+  .d-sign-out {
+    background-color: #d9534f !important; }
   /*------------------------------------------------------------
     Landing
     -------------------------------------------------------------*/
